--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, 
+rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1496487611274-f4cd790205d2?auto=format&fit=crop&w=1510&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');">
+  <div class="banner-content">
+    <h1>Você tem direitos</h1>
+    <p>Saibam quais são eles</p>
+    <a class="btn btn-primary btn-lg">Fale com o Tom</a>
+  </div>
+</div>
