--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 /* Main navbar */
-.navbar {
+.navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
@@ -11,47 +11,47 @@
 }
 
 /* Logo */
-.navbar-brand img {
+.navbar-wagon-brand img {
   height: 88px;
 }
 
 /* User Avatar */
-.navbar .avatar {
+.navbar-wagon .avatar {
   height: 35px;
   width: 35px;
   border-radius: 50%;
 }
 
 /* Right section */
-.navbar-right {
+.navbar-wagon-right {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 /* Basic navbar item */
-.navbar-item {
+.navbar-wagon-item {
   cursor: pointer;
   padding: 0 20px;
 }
 
 /* Navbar link */
-.navbar-link {
+.navbar-wagon-link {
   color: #616668;
   font-size: 14px;
 }
-.navbar-link:hover {
+.navbar-wagon-link:hover {
   color: #da552f;
   text-decoration: none;
 }
 
 /* Dropdown menu */
-.navbar-dropdown-menu {
+.navbar-wagon-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
 }
-.navbar-dropdown-menu li > a {
+.navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
@@ -59,11 +59,11 @@
   line-height: 22px !important;
   padding: 10px 20px;
 }
-.navbar-dropdown-menu li > a:hover {
+.navbar-wagon-dropdown-menu li > a:hover {
   background: transparent !important;
   color: black !important;
 }
-.navbar-dropdown-menu:before {
+.navbar-wagon-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
