Buttons, background banner image and responsivity fixed

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,22 +1,16 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#">
+    <a href="https://github.com/luizgzn/rede_legal">
       <i class="fa fa-github"></i>
     </a>
-    <a href="#">
+    <a href="https://www.instagram.com/redelegal">
       <i class="fa fa-instagram"></i>
     </a>
-    <a href="#">
+    <a href="https://www.facebook.com/tomdarede/">
       <i class="fa fa-facebook"></i>
     </a>
-    <a href="#">
-      <i class="fa fa-twitter"></i>
-    </a>
-    <a href="#">
-      <i class="fa fa-linkedin"></i>
-    </a>
   </div>
-  <div class="footer-copyright">
+  <div class="footer-copyright" >
     Feito com
     <i class="fa fa-heart"></i> por Tom
   </div>
