--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -22,3 +22,18 @@
   opacity: 0.6;
   margin-bottom: 30px;
 }
+
+@media (min-width: 768px) {
+    .banner-content {
+      position: absolute;
+      bottom: 0;
+      right: 13em;
+  }
+}
+
+@media (max-width: 768px) {
+  .banner-content {
+    position: absolute;
+    bottom: 0;
+  }
+}
