--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -15,7 +15,7 @@
 
 .footer-links a {
   color: black;
-  opacity: 0.15;
+  opacity: 0.7;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -23,8 +23,14 @@
 
 .footer-links a:hover {
   opacity: 1;
+  color: #fddc00;
 }
+
 
 .footer .fa-heart {
   color: #D23333;
+}
+
+.footer-copyright {
+  
 }
