--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,7 +11,8 @@ $font-size-base: 18px;
 
 // Colors
 $gray-base:       $gray;
-$brand-primary:   $blue;
+$brand-primary : #fddc00;
+$btn-primary-border: #fddc00;
 $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
