--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #EE5F5B;
 $blue: #469AE0;
-$yellow: #FDB631;
+$yellow: #fddc00;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
