--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -38,7 +38,7 @@
 
 .btn-secondary-color {
   color: #f7f7f7;
-  background-color: $orange;
+  background-color: $green;
 }
 
 .btn-secondary-color:hover {
