--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="banner" style="background-image: url('http://res.cloudinary.com/dohfsgcbx/image/upload/v1511621106/banner_site_hack_urv9yo.jpg');">
   <div class="banner-content">
-    <a class="btn btn-primary btn-lg btn-override">Fale com o Tom</a>
+    <%= link_to  "Fale com o tom", "https://www.messenger.com/t/tomdarede", class: "btn btn-primary btn-lg btn-override" %>
   </div>
 </div>
