After login user can redirect to messager

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Pergunte ao Tom", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Pergunte ao Tom", "https://www.messenger.com/t/tomdarede", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Menssagens", "#", class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Ajuda Profissional", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
